--- a/src/Pages/about/style.scss
+++ b/src/Pages/about/style.scss
@@ -1,3 +1,6 @@
+@import '../../assets/style/variables';
+@import '../../assets/style/mixin';
+
 .L-about-me-container {
   width       : 100%;
   height      : 100%;
@@ -28,20 +31,18 @@
 
 	  }
 
-	  .L-about-title {
+	  .L-about-me {
 		width   : 100%;
 		padding : 30px 0;
 
 		.L-name-surname {
 		  font-family : "Arial Black";
-		  font-size   : 80px;
+		  font-size   : 100px;
 		  color       : white;
 		  text-shadow : 0 0 20px black;
-
 		}
 
-		.L-about-me {
-		  /* From https://css.glass */
+		.L-about-title {
 		  background              : rgba(255, 255, 255, 0.35);
 		  border-radius           : 16px;
 		  box-shadow              : 0 4px 30px rgba(0, 0, 0, 0.1);
@@ -51,13 +52,33 @@
 		  text-align              : start;
 		  .L-about-me-title {
 			font-size : 40px;
-			padding: 10px 0 0 30px;
+			padding   : 20px 0 20px 20px;
 		  }
 
 		  .L-about-me-desc {
 			display   : block;
-			font-size : 30px;
-			padding   : 30px;
+			font-size : $font-size-24;
+			padding   : 10px 20px;
+		  }
+
+		  h3 {
+			font-size : $font-size-32;
+			padding   : 15px 20px;
+		  }
+
+		  ul {
+			padding : 0 45px;
+
+			li {
+			  padding   : 5px 0;
+			  font-size : $font-size-24;
+			}
+		  }
+
+		  p {
+			padding   : 10px 20px;
+			font-size : $font-size-24;
+
 		  }
 		}
 	  }
