--- a/src/Pages/about/style.scss
+++ b/src/Pages/about/style.scss
@@ -6,29 +6,30 @@
   height      : 100%;
   padding-top : 150px;
   font-family : 'JetBrains Mono', serif;
-  background  : rgb(37, 93, 170);
-  background  : -moz-linear-gradient(90deg, rgba(37, 93, 170, 1) 0%, rgba(255, 255, 255, 1) 50%, rgba(37, 93, 170, 1) 100%);
-  background  : -webkit-linear-gradient(90deg, rgba(37, 93, 170, 1) 0%, rgba(255, 255, 255, 1) 50%, rgba(37, 93, 170, 1) 100%);
-  background  : linear-gradient(90deg, rgba(37, 93, 170, 1) 0%, rgba(255, 255, 255, 1) 50%, rgba(37, 93, 170, 1) 100%);
-  filter      : progid:DXImageTransform.Microsoft.gradient(startColorstr="#255daa", endColorstr="#255daa", GradientType=1);
-
-  .L-about-wrapper {
+  background: rgb(249,186,163);
+  background: -moz-radial-gradient(circle, rgba(249,186,163,1) 0%, rgba(235,120,153,1) 0%, rgba(249,186,163,1) 100%);
+  background: -webkit-radial-gradient(circle, rgba(249,186,163,1) 0%, rgba(235,120,153,1) 0%, rgba(249,186,163,1) 100%);
+  background: radial-gradient(circle, rgba(249,186,163,1) 0%, rgba(235,120,153,1) 0%, rgba(249,186,163,1) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#f9baa3",endColorstr="#f9baa3",GradientType=1);  .L-about-wrapper {
 	width : 100%;
 
 	.L-about-description {
 	  width : 100%;
 
-	  .L-my-img {
-		margin   : 0 auto;
-		width    : 500px;
-		height   : 600px;
-		position : relative;
-
-	  }
 
 	  .L-img-container {
-		width : 100%;
-
+		width: max-content;
+		margin: 0 auto;
+		border: 10px solid rgba(255, 255, 255, 0.66);
+		backdrop-filter: blur(8.7px);
+		-webkit-backdrop-filter: blur(8.7px);
+		border-radius: 24px;
+		overflow: hidden;
+		.L-my-img {
+		  margin        : 0 auto;
+		  width         : 500px;
+		  height        : 500px;
+		}
 	  }
 
 	  .L-about-me {
@@ -50,6 +51,7 @@
 		  -webkit-backdrop-filter : blur(5.1px);
 		  margin                  : 30px 0;
 		  text-align              : start;
+
 		  .L-about-me-title {
 			font-size : 40px;
 			padding   : 20px 0 20px 20px;
