--- a/src/Pages/projects/style.scss
+++ b/src/Pages/projects/style.scss
@@ -12,6 +12,7 @@
 				  rgba(238, 174, 202, 1) 0%,
 				  rgb(23, 105, 199) 100%
   );
+
   .L-projects-container {
 	margin-top : 20px;
 	width      : 100%;
@@ -64,12 +65,14 @@
 		border-radius       : 25px;
 
 	  }
+
 	  .front {
 		-webkit-perspective : none;
 		-moz-perspective    : none;
 		transform           : perspective(none) rotateY(0deg);
 
 	  }
+
 	  .L-slider-img {
 		min-height          : 300px;
 		background-position : top;
@@ -78,9 +81,10 @@
 		  min-height : 400px;
 		}
 		@include screen-max-width-576 {
-		  min-height          : 300px;
+		  min-height : 300px;
 		}
 	  }
+
 	  .back {
 		width               : 100%;
 		height              : 100%;
@@ -99,6 +103,20 @@
 			width       : 100%;
 			color       : $white;
 			font-family : SansSerif;
+		  }
+
+		  a {
+			color               : $white;
+			transition          : 0.3s;
+
+			-webkit-text-stroke : 0.5px black;
+
+			&:hover {
+			  color               : black;
+			  -webkit-text-stroke : 0.5px white;
+			  transition          : 0.3s;
+			}
+
 		  }
 		}
 	  }
