--- a/src/Pages/about/style.scss
+++ b/src/Pages/about/style.scss
@@ -6,11 +6,13 @@
   height      : 100%;
   padding-top : 150px;
   font-family : 'JetBrains Mono', serif;
-  background: rgb(249,186,163);
-  background: -moz-radial-gradient(circle, rgba(249,186,163,1) 0%, rgba(235,120,153,1) 0%, rgba(249,186,163,1) 100%);
-  background: -webkit-radial-gradient(circle, rgba(249,186,163,1) 0%, rgba(235,120,153,1) 0%, rgba(249,186,163,1) 100%);
-  background: radial-gradient(circle, rgba(249,186,163,1) 0%, rgba(235,120,153,1) 0%, rgba(249,186,163,1) 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#f9baa3",endColorstr="#f9baa3",GradientType=1);  .L-about-wrapper {
+  background  : rgb(249, 186, 163);
+  background  : -moz-radial-gradient(circle, rgba(249, 186, 163, 1) 0%, rgba(235, 120, 153, 1) 0%, rgba(249, 186, 163, 1) 100%);
+  background  : -webkit-radial-gradient(circle, rgba(249, 186, 163, 1) 0%, rgba(235, 120, 153, 1) 0%, rgba(249, 186, 163, 1) 100%);
+  background  : radial-gradient(circle, rgba(249, 186, 163, 1) 0%, rgba(235, 120, 153, 1) 0%, rgba(249, 186, 163, 1) 100%);
+  filter      : progid:DXImageTransform.Microsoft.gradient(startColorstr="#f9baa3", endColorstr="#f9baa3", GradientType=1);
+
+  .L-about-wrapper {
 	width : 100%;
 
 	.L-about-description {
@@ -18,17 +20,18 @@
 
 
 	  .L-img-container {
-		width: max-content;
-		margin: 0 auto;
-		border: 10px solid rgba(255, 255, 255, 0.66);
-		backdrop-filter: blur(8.7px);
-		-webkit-backdrop-filter: blur(8.7px);
-		border-radius: 24px;
-		overflow: hidden;
+		width                   : max-content;
+		margin                  : 0 auto;
+		border                  : 10px solid rgba(255, 255, 255, 0.1);
+		backdrop-filter         : blur(8.7px);
+		-webkit-backdrop-filter : blur(8.7px);
+		border-radius           : 24px;
+		overflow                : hidden;
+
 		.L-my-img {
-		  margin        : 0 auto;
-		  width         : 500px;
-		  height        : 500px;
+		  margin : 0 auto;
+		  width  : 500px;
+		  height : 500px;
 		}
 	  }
 
@@ -39,22 +42,24 @@
 		.L-name-surname {
 		  font-family : "Arial Black";
 		  font-size   : 100px;
-		  color       : white;
-		  text-shadow : 0 0 20px black;
+		  color       : $white;
 		}
 
 		.L-about-title {
-		  background              : rgba(255, 255, 255, 0.35);
+		  background              : rgba(179, 170, 170, 0.1);
 		  border-radius           : 16px;
 		  box-shadow              : 0 4px 30px rgba(0, 0, 0, 0.1);
 		  backdrop-filter         : blur(5.1px);
 		  -webkit-backdrop-filter : blur(5.1px);
 		  margin                  : 30px 0;
 		  text-align              : start;
+		  color                   : #ffffff;
 
 		  .L-about-me-title {
-			font-size : 40px;
-			padding   : 20px 0 20px 20px;
+			font-size   : 40px;
+			padding     : 20px 0 20px 20px;
+			font-family : "Arial Black";
+
 		  }
 
 		  .L-about-me-desc {
@@ -73,13 +78,13 @@
 
 			li {
 			  padding   : 5px 0;
-			  font-size : $font-size-24;
+			  font-size : $font-size-20;
 			}
 		  }
 
 		  p {
 			padding   : 10px 20px;
-			font-size : $font-size-24;
+			font-size : $font-size-20;
 
 		  }
 		}
