--- a/src/Pages/about/style.scss
+++ b/src/Pages/about/style.scss
@@ -20,18 +20,41 @@
 
 
 	  .L-img-container {
-		width                   : max-content;
-		margin                  : 0 auto;
-		border                  : 10px solid rgba(255, 255, 255, 0.1);
-		backdrop-filter         : blur(8.7px);
-		-webkit-backdrop-filter : blur(8.7px);
-		border-radius           : 24px;
-		overflow                : hidden;
+		max-width : 600px;
+		width     : 100%;
+		margin    : 0 auto;
 
-		.L-my-img {
-		  margin : 0 auto;
-		  width  : 500px;
-		  height : 500px;
+		.L-img-box {
+		  max-width               : 450px;
+		  width                   : 100%;
+		  height                  : 420px;
+		  margin                  : 0 auto;
+		  background              : rgba(255, 255, 255, 0.12);
+		  border-radius           : 16px;
+		  box-shadow              : 0 4px 30px rgba(0, 0, 0, 0.1);
+		  backdrop-filter         : blur(5px);
+		  -webkit-backdrop-filter : blur(5px);
+		  @include screen-max-width-767 {
+			max-width : 350px;
+			height    : 280px;
+		  }
+		  @include screen-max-width-576 {
+			height : 250px;
+		  }
+
+		  .L-my-img {
+			max-width : 550px;
+			width     : 100%;
+			height    : 480px;
+
+			@include screen-max-width-767 {
+			  max-width : 350px;
+			  height    : 330px;
+			}
+			@include screen-max-width-576 {
+			  height : 300px;
+			}
+		  }
 		}
 	  }
 
@@ -41,8 +64,20 @@
 
 		.L-name-surname {
 		  font-family : "Arial Black";
-		  font-size   : 100px;
+		  font-size   : $font-size-100;
 		  color       : $white;
+		  text-align  : center;
+		  @include screen-max-width-991 {
+			margin-top : 20px;
+			font-size  : $font-size-80;
+		  }
+		  @include screen-max-width-767 {
+			font-size : $font-size-60
+		  }
+		  @include screen-max-width-576 {
+			font-size : $font-size-36;
+		  }
+
 		}
 
 		.L-about-title {
@@ -54,11 +89,20 @@
 		  margin                  : 30px 0;
 		  text-align              : start;
 		  color                   : #ffffff;
+		  font-family: Bahnschrift;
 
 		  .L-about-me-title {
-			font-size   : 40px;
+			font-size   : $font-size-40;
 			padding     : 20px 0 20px 20px;
 			font-family : "Arial Black";
+			@include screen-max-width-767 {
+			  font-size : $font-size-36;
+			}
+			@include screen-max-width-576 {
+			  font-size : $font-size-28;
+			  padding   : 10px 0 10px 10px;
+
+			}
 
 		  }
 
@@ -66,19 +110,24 @@
 			display   : block;
 			font-size : $font-size-24;
 			padding   : 10px 20px;
-		  }
-
-		  h3 {
-			font-size : $font-size-32;
-			padding   : 15px 20px;
+			@include screen-max-width-576 {
+			  padding : 10px 10px;
+			  font-size: $font-size-20;
+			}
 		  }
 
 		  ul {
 			padding : 0 45px;
+			@include screen-max-width-576 {
+			  padding : 0 30px;
+			}
 
 			li {
 			  padding   : 5px 0;
 			  font-size : $font-size-20;
+			  @include screen-max-width-576{
+				font-size: $font-size-16;
+			  }
 			}
 		  }
 
