--- a/src/Pages/projects/style.scss
+++ b/src/Pages/projects/style.scss
@@ -12,6 +12,10 @@
 				  rgba(238, 174, 202, 1) 0%,
 				  rgb(23, 105, 199) 100%
   );
+  @include screen-max-width-991 {
+	padding-top : 100px;
+  }
+;
 
   .L-projects-container {
 	margin-top : 20px;
@@ -35,7 +39,7 @@
 	  @include screen-max-width-991 {
 		width      : 80%;
 		min-height : 400px;
-		margin     : 30px auto;
+		margin     : 30px auto
 	  }
 	  @include screen-max-width-767 {
 		width : 90%;
@@ -91,24 +95,26 @@
 		-webkit-perspective : none;
 		-moz-perspective    : none;
 		transform           : perspective(none) rotateY(180deg);
+		font-family         : "Arial Black";
 
 		.back-content {
 		  width      : 100%;
 		  height     : 100%;
 		  text-align : center;
-		  padding    : 15px 25px;
+		  padding    : 0 25px;
 
 		  p {
-			margin-top  : 15px;
-			width       : 100%;
-			color       : $white;
-			font-family : SansSerif;
+			width     : 100%;
+			color     : $white;
+			font-size : $font-size-20 !important;
+			@include screen-max-width-576 {
+			  font-size : $font-size-16 !important;
+			}
 		  }
 
 		  a {
 			color               : $white;
 			transition          : 0.3s;
-
 			-webkit-text-stroke : 0.5px black;
 
 			&:hover {
