--- a/src/assets/style/variables.scss
+++ b/src/assets/style/variables.scss
@@ -50,18 +50,17 @@ $font-size-28          : 28px;
 $font-size-30          : 30px;
 $font-size-32          : 32px;
 $font-size-36          : 36px;
+$font-size-38          : 38px;
 $font-size-40          : 40px;
 $font-size-48          : 48px;
 $font-size-50          : 50px;
 $font-size-60          : 60px;
 $font-size-80          : 80px;
+$font-size-100         : 100px;
 $font-size-150         : 150px;
 $font-size-200         : 200px;
 $font-size-250         : 250px;
 $font-size-300         : 300px;
-
-
-
 
 
 //page withs
@@ -76,8 +75,8 @@ $max-width-767         : 767px;
 $max-width-576         : 576px;
 $max-width-440         : 440px;
 // transitions
-$transition-3            : 0.3s ;
-$transition-5            : 0.5s ;
-$transition-1            : 1s ;
-$transition-2            : 2s ;
+$transition-3          : 0.3s;
+$transition-5          : 0.5s;
+$transition-1          : 1s;
+$transition-2          : 2s;
 
