--- a/src/Pages/about/style.scss
+++ b/src/Pages/about/style.scss
@@ -41,17 +41,22 @@
 		  @include screen-max-width-576 {
 			height : 250px;
 		  }
+		  @include screen-max-width-440 {
+			height : 265px;
+		  }
 
 		  .L-my-img {
 			max-width : 550px;
 			width     : 100%;
 			height    : 420px;
-
 			@include screen-max-width-767 {
 			  max-width : 350px;
-			  height    : 330px;
+			  height    : 315px;
 			}
 			@include screen-max-width-576 {
+			  height : 285px;
+			}
+			@include screen-max-width-440 {
 			  height : 300px;
 			}
 		  }
@@ -89,7 +94,7 @@
 		  margin                  : 30px 0;
 		  text-align              : start;
 		  color                   : #ffffff;
-		  font-family: Bahnschrift;
+		  font-family             : Bahnschrift;
 
 		  .L-about-me-title {
 			font-size   : $font-size-40;
@@ -111,8 +116,8 @@
 			font-size : $font-size-24;
 			padding   : 10px 20px;
 			@include screen-max-width-576 {
-			  padding : 10px 10px;
-			  font-size: $font-size-20;
+			  padding   : 10px 10px;
+			  font-size : $font-size-20;
 			}
 		  }
 
@@ -125,8 +130,8 @@
 			li {
 			  padding   : 5px 0;
 			  font-size : $font-size-20;
-			  @include screen-max-width-576{
-				font-size: $font-size-16;
+			  @include screen-max-width-576 {
+				font-size : $font-size-16;
 			  }
 			}
 		  }
