--- a/src/Pages/projects/style.scss
+++ b/src/Pages/projects/style.scss
@@ -103,10 +103,16 @@
 		  text-align : center;
 		  padding    : 0 25px;
 
+		  h2 {
+			font-size      : $font-size-40;
+			padding-bottom : 20px;
+			color: $white;
+		  }
+
 		  p {
 			width     : 100%;
 			color     : $white;
-			font-size : $font-size-20 !important;
+			font-size : $font-size-20;
 			@include screen-max-width-576 {
 			  font-size : $font-size-16 !important;
 			}
