--- a/src/Pages/projects/style.scss
+++ b/src/Pages/projects/style.scss
@@ -107,6 +107,9 @@
 			font-size      : $font-size-40;
 			padding-bottom : 20px;
 			color: $white;
+			@include screen-max-width-440{
+			  font-size: $font-size-32;
+			}
 		  }
 
 		  p {
@@ -114,7 +117,7 @@
 			color     : $white;
 			font-size : $font-size-20;
 			@include screen-max-width-576 {
-			  font-size : $font-size-16 !important;
+			  font-size : $font-size-16 ;
 			}
 		  }
 
