--- a/src/Components/Header/style.scss
+++ b/src/Components/Header/style.scss
@@ -9,12 +9,12 @@
   box-shadow              : 0 4px 30px $box-shadow-black;
   backdrop-filter         : blur(14px);
   -webkit-backdrop-filter : blur(14px);
-  z-index                 : 9999;
+  z-index                 : 1000;
   @include screen-max-width-1400 {
 	padding : 0 25px;
   }
   @include screen-max-width-991 {
-	width      : 49%;
+	width      : 100%;
 	height     : 100%;
 	display    : flex;
 	left       : unset;
@@ -22,6 +22,8 @@
 	bottom     : 0;
 	transform  : translateX(100%);
 	transition : $transition-3 all;
+	backdrop-filter         : blur(20px);
+	-webkit-backdrop-filter : blur(20px);
   }
 
   .L-header-wrapper {
@@ -179,12 +181,12 @@
   display : none;
   @include screen-max-width-991 {
 	display  : block;
-	position : absolute;
+	position : fixed;
 	top      : 50px;
 	left     : 50px;
 	width    : 30px;
 	height   : 30px;
-	z-index  : 10;
+	z-index  : 1001;
 
 	.burger-line {
 	  position         : absolute;
