--- a/src/Components/Header/style.scss
+++ b/src/Components/Header/style.scss
@@ -14,14 +14,14 @@
 	padding : 0 25px;
   }
   @include screen-max-width-991 {
-	width      : 100%;
-	height     : 100%;
-	display    : flex;
-	left       : unset;
-	right      : 0;
-	bottom     : 0;
-	transform  : translateX(100%);
-	transition : $transition-3 all;
+	width                   : 100%;
+	height                  : 100%;
+	display                 : flex;
+	left                    : unset;
+	right                   : 0;
+	bottom                  : 0;
+	transform               : translateX(100%);
+	transition              : $transition-3 all;
 	backdrop-filter         : blur(20px);
 	-webkit-backdrop-filter : blur(20px);
   }
@@ -175,7 +175,6 @@
 .L-header-active {
   transform  : translateX(0);
   transition : $transition-3 all;
-
 }
 .L-burger {
   display : none;
@@ -188,6 +187,15 @@
 	height   : 30px;
 	z-index  : 1001;
 
+	@include screen-max-width-576 {
+	  top: 55px;
+	  left: 10px;
+	  width  : 5px;
+	  height : 5px;
+	}
+	@include screen-max-width-440 {
+	  top: 60px;
+	}
 	.burger-line {
 	  position         : absolute;
 	  top              : 50%;
@@ -195,6 +203,9 @@
 	  width            : 30px;
 	  height           : 1.5px;
 	  background-color : $white;
+	  @include screen-max-width-576 {
+		width : 35px;
+	  }
 
 	  &:before {
 		content          : "";
@@ -203,6 +214,7 @@
 		width            : 100%;
 		height           : 1.5px;
 		background-color : $white;
+
 	  }
 
 	  &:after {
@@ -212,10 +224,11 @@
 		width            : 100%;
 		height           : 1.5px;
 		background-color : $white;
+
+
 	  }
 	}
   }
-
   .burger-active {
 	transition : $transition-3 all;
 	transform  : rotate(135deg);
@@ -229,7 +242,6 @@
 	  transform : rotate(90deg);
 	}
   }
-
   .burger-disable {
 	transform  : rotate(-180deg);
 	transition : $transition-3 all;
