--- a/src/Pages/projects/style.scss
+++ b/src/Pages/projects/style.scss
@@ -26,13 +26,15 @@
 	}
 
 	.card {
-	  width         : 45%;
-	  height        : 300px;
-	  position      : relative;
-	  cursor        : pointer;
-	  margin        : 20px 0;
-	  border-radius : 25px;
-	  box-shadow    : 0 4px 30px rgba(0, 0, 0, 0.21);
+	  width                 : 45%;
+	  height                : 300px;
+	  position              : relative;
+	  cursor                : pointer;
+	  margin                : 20px 0;
+	  border-radius         : 25px;
+	  -webkit-border-radius : 25px;
+	  -moz-border-radius    : 25px;
+	  box-shadow            : 0 4px 30px rgba(0, 0, 0, 0.21);
 	  @include screen-max-width-1300 {
 		width : 48%;
 	  }
@@ -52,21 +54,28 @@
 
 
 	  &:hover > .front {
-		transform : perspective(1000px) rotateY(-180deg);
+		transform         : perspective(1000px) rotateY(-180deg);
+		-webkit-transform : perspective(1000px) rotateY(-180deg);
+
 	  }
 
 	  &:hover > .back {
-		transform : perspective(1000px) rotateY(0deg);
+		-webkit-transform : perspective(1000px) rotateY(0deg);
+		transform         : perspective(1000px) rotateY(0deg);
 	  }
 
 	  .front, .back {
-		width               : 100%;
-		height              : 100%;
-		backface-visibility : hidden;
-		overflow            : hidden;
-		position            : absolute;
-		transition          : transform $transition-1 ease-out;
-		border-radius       : 25px;
+		width                       : 100%;
+		height                      : 100%;
+		backface-visibility         : hidden;
+		-webkit-backface-visibility : hidden;
+		overflow                    : hidden;
+		position                    : absolute;
+		transition                  : transform $transition-1 ease-out;
+		-webkit-transition          : transform $transition-1 ease-out;
+		-webkit-border-radius       : 25px;
+		-moz-border-radius          : 25px;
+		border-radius               : 25px;
 
 	  }
 
@@ -106,9 +115,9 @@
 		  h2 {
 			font-size      : $font-size-40;
 			padding-bottom : 20px;
-			color: $white;
-			@include screen-max-width-440{
-			  font-size: $font-size-32;
+			color          : $white;
+			@include screen-max-width-440 {
+			  font-size : $font-size-32;
 			}
 		  }
 
@@ -117,7 +126,7 @@
 			color     : $white;
 			font-size : $font-size-20;
 			@include screen-max-width-576 {
-			  font-size : $font-size-16 ;
+			  font-size : $font-size-16;
 			}
 		  }
 
