--- a/src/assets/style/mixin.scss
+++ b/src/assets/style/mixin.scss
@@ -1,54 +1,60 @@
 @import "variables";
 
 @mixin screen-max-width-1600 {
-  @media (max-width: $max-width-1600) {
-    @content;
+  @media (max-width : $max-width-1600) {
+	@content;
   }
 }
 @mixin screen-max-width-1400 {
-  @media (max-width: $max-width-1400) {
-    @content;
+  @media (max-width : $max-width-1400) {
+	@content;
   }
 }
 
 @mixin screen-max-width-1300 {
-  @media (max-width: $max-width-1300) {
-    @content;
+  @media (max-width : $max-width-1300) {
+	@content;
+  }
+}
+@mixin galaxy-fold {
+  @media (min-width: 280px) and (max-width: 767px) and (orientation: landscape){
+	@content;
   }
 }
 
+
 @mixin screen-max-width-1200 {
-  @media (max-width: $max-width-1200) {
-    @content;
+  @media (max-width : $max-width-1200) {
+	@content;
   }
 }
 
 
 @mixin screen-max-width-1024 {
-  @media (max-width: $max-width-1024) {
-    @content;
+  @media (max-width : $max-width-1024) {
+	@content;
   }
 }
 
 @mixin screen-max-width-991 {
-  @media (max-width: $max-width-991) {
-    @content;
+  @media (max-width : $max-width-991) {
+	@content;
   }
 }
 
 @mixin screen-max-width-767 {
-  @media (max-width: $max-width-767) {
-    @content;
+  @media (max-width : $max-width-767) {
+	@content;
   }
 }
 
 @mixin screen-max-width-576 {
-  @media (max-width: $max-width-576) {
-    @content;
+  @media (max-width : $max-width-576) {
+	@content;
   }
 }
 @mixin screen-max-width-440 {
-  @media (max-width: $max-width-440) {
-    @content;
+  @media (max-width : $max-width-440) {
+	@content;
   }
 }
