--- a/src/Pages/contacts/style.scss
+++ b/src/Pages/contacts/style.scss
@@ -43,12 +43,12 @@
 	  position              : relative;
 	  max-width             : 600px;
 	  height                : 600px;
-	  border                : 25px solid #f59dda;
+	  border                : 20px solid $pink-map;
+	  -webkit-border        : 20px solid $pink-map;
 	  border-radius         : 50%;
 	  -webkit-border-radius : 50%;
 	  margin                : 0 auto;
 	  overflow              : hidden;
-
 	  @include screen-max-width-1300 {
 		max-width : 550px;
 		height    : 550px;
@@ -56,37 +56,45 @@
 	  @include screen-max-width-1200 {
 		max-width      : 500px;
 		height         : 500px;
-		border         : 20px solid #f59dda;
-		-webkit-border : 20px solid #f59dda;
+		border         : 20px solid $pink-map;
+		-webkit-border : 20px solid $pink-map;
 	  }
 	  @include screen-max-width-991 {
 		max-width : 500px;
 		height    : 500px;
-		border    : 15px solid #f59dda;
+		border    : 15px solid $pink-map;
 	  }
 	  @include galaxy-fold {
-		max-width: 350px;
-		width: 100%;
-		height: 350px;
-		border: 10px solid #f59dda;
+		max-width      : 350px;
+		width          : 100%;
+		height         : 350px;
+		border         : 10px solid $pink-map;
+		-webkit-border : 10px solid $pink-map;
+
 	  }
 	  @include screen-max-width-576 {
-		max-width : 400px;
-		width     : 100%;
-		height    : 400px;
-		border    : 10px solid #f59dda;
+		max-width      : 400px;
+		width          : 100%;
+		height         : 400px;
+		border         : 10px solid $pink-map;
+		-webkit-border : 10px solid $pink-map;
+
 	  }
 	  @include screen-max-width-440 {
-		max-width : 300px;
-		width     : 100%;
-		height    : 300px;
-		border    : 5px solid #f59dda;
+		max-width      : 300px;
+		width          : 100%;
+		height         : 300px;
+		border         : 5px solid $pink-map;
+		-webkit-border : 5px solid $pink-map;
+
 	  }
 
 	  .L-map {
-		width     : 550px;
-		height    : 550px;
-		transform : scale(1.5);
+		width         : 600px;
+		height        : 600px;
+		transform     : scale(1.4);
+		border-radius : 50%;
+		border: 10px solid red;
 	  }
 	}
 
@@ -101,9 +109,9 @@
 		height : 45px;
 	  }
 	  @include galaxy-fold {
-		top: 55px;
-		width: 50px;
-		height: 50px;
+		top    : 55px;
+		width  : 50px;
+		height : 50px;
 	  }
 	}
 
@@ -116,8 +124,8 @@
 	  font-size           : $font-size-80;
 	  z-index             : 1;
 	  @include galaxy-fold {
-		left: 65px;
-		font-size: $font-size-50;
+		left      : 65px;
+		font-size : $font-size-50;
 	  }
 	  @include screen-max-width-576 {
 		font-size : $font-size-48;
