--- a/src/assets/style/variables.scss
+++ b/src/assets/style/variables.scss
@@ -7,6 +7,7 @@ $yellow                : #FFD333;
 $orange                : #FFA800;
 $orange-pie            : #FFB677;
 $pink                  : #EC7A9C;
+$pink-map              : #f59dda;
 $red                   : #FB4C4C;
 $red-dark              : rgba(255, 46, 46, 1);
 $purple                : #9253E2;
