--- a/src/Components/Header/style.scss
+++ b/src/Components/Header/style.scss
@@ -134,7 +134,6 @@
 		@include screen-max-width-767 {
 		  font-size : $font-size-36;
 		}
-
 		@include screen-max-width-576 {
 		  font-size : $font-size-28;
 		}
@@ -174,87 +173,142 @@
 }
 .L-header-active {
   transform  : translateX(0);
-  transition : $transition-3 all;
+  transition : $transition-3;
 }
-.L-burger {
+//.L-burger {
+//  display : none;
+//  @include screen-max-width-991 {
+//	display  : block;
+//	position : absolute;
+//	top      : 50px;
+//	left     : 50px;
+//	width    : 30px;
+//	height   : 30px;
+//	z-index  : 10000;
+//
+//	@include screen-max-width-576 {
+//	  position : absolute;
+//	  top: 55px;
+//	  left: 10px;
+//	  width  : 5px;
+//	  height : 5px;
+//	}
+//	@include screen-max-width-440 {
+//	  top: 60px;
+//	}
+//	.burger-line {
+//	  position         : absolute;
+//	  top              : 50%;
+//	  display          : block;
+//	  width            : 30px;
+//	  height           : 1.5px;
+//	  background-color : $white;
+//	  @include screen-max-width-576 {
+//		width : 35px;
+//	  }
+//
+//	  &:before {
+//		content          : "";
+//		position         : absolute;
+//		top              : -15px;
+//		width            : 100%;
+//		height           : 1.5px;
+//		background-color : $white;
+//
+//	  }
+//
+//	  &:after {
+//		content          : "";
+//		position         : absolute;
+//		top              : 15px;
+//		width            : 100%;
+//		height           : 1.5px;
+//		background-color : $white;
+//
+//
+//	  }
+//	}
+//  }
+//  .burger-active {
+//	transition : $transition-3 ;
+//	transform  : rotate(135deg);
+//	position : fixed;
+//	&:before {
+//	  display : none;
+//	}
+//	&:after {
+//	  top       : 0;
+//	  transform : rotate(90deg);
+//	}
+//  }
+//  .burger-disable {
+//	transform  : rotate(-180deg);
+//	transition : $transition-3 ;
+//	&:before {
+//	  display : block;
+//	}
+//	&:after {
+//	  top       : 15px;
+//	  transform : rotate(0deg);
+//	}
+//  }
+//}
+.L-burger-wrapper {
   display : none;
-  @include screen-max-width-991 {
-	display  : block;
+
+  .L-burger {
+	position        : absolute;
+	width           : 40px;
+	height          : 35px;
+	display         : flex;
+	justify-content : space-between;
+	align-items     : center;
+	flex-direction  : column;
+	left            : 40px;
+	top             : 30px;
+	cursor          : pointer;
+
+
+	.L-burger-line {
+	  width         : 100%;
+	  height        : 4px;
+	  background    : $white;
+	  border-radius : 10px;
+	  transition    : 0.3s;
+
+	}
+
+	.L-burger-active {
+	  justify-content : center;
+	}
+
+	.L-burger-active:nth-child(1) {
+	  position  : absolute;
+	  transform : rotateZ(45deg);
+	}
+
+	.L-burger-active:nth-child(2) {
+	  position : absolute;
+	  width    : 0px;
+	  height   : 0px;
+	}
+
+	.L-burger-active:nth-child(3) {
+	  position  : absolute;
+	  transform : rotateZ(-45deg);
+	}
+  }
+
+  .L-burger-active {
+	cursor   : pointer;
 	position : fixed;
-	top      : 50px;
-	left     : 50px;
-	width    : 30px;
-	height   : 30px;
-	z-index  : 1001;
-
-	@include screen-max-width-576 {
-	  top: 55px;
-	  left: 10px;
-	  width  : 5px;
-	  height : 5px;
-	}
-	@include screen-max-width-440 {
-	  top: 60px;
-	}
-	.burger-line {
-	  position         : absolute;
-	  top              : 50%;
-	  display          : block;
-	  width            : 30px;
-	  height           : 1.5px;
-	  background-color : $white;
-	  @include screen-max-width-576 {
-		width : 35px;
-	  }
-
-	  &:before {
-		content          : "";
-		position         : absolute;
-		top              : -15px;
-		width            : 100%;
-		height           : 1.5px;
-		background-color : $white;
-
-	  }
-
-	  &:after {
-		content          : "";
-		position         : absolute;
-		top              : 15px;
-		width            : 100%;
-		height           : 1.5px;
-		background-color : $white;
-
-
-	  }
-	}
+	top      : 20px;
+	left     : 20px;
+	z-index  : 9000;
   }
-  .burger-active {
-	transition : $transition-3 all;
-	transform  : rotate(135deg);
 
-	&:before {
-	  display : none;
-	}
-
-	&:after {
-	  top       : 0;
-	  transform : rotate(90deg);
-	}
-  }
-  .burger-disable {
-	transform  : rotate(-180deg);
-	transition : $transition-3 all;
-
-	&:before {
-	  display : block;
-	}
-
-	&:after {
-	  top       : 15px;
-	  color     : red;
-	  transform : rotate(0deg);
-	}
+  @include screen-max-width-991 {
+	display : block;
   }
 }
 .L-lng-font {
