--- a/src/Pages/projects/style.scss
+++ b/src/Pages/projects/style.scss
@@ -14,8 +14,7 @@
   );
   @include screen-max-width-991 {
 	padding-top : 100px;
-  }
-;
+  };
 
   .L-projects-container {
 	margin-top : 20px;
@@ -24,7 +23,6 @@
 	  display        : flex;
 	  flex-direction : column;
 	}
-
 	.card {
 	  width                 : 45%;
 	  height                : 300px;
@@ -45,25 +43,19 @@
 	  }
 	  @include screen-max-width-767 {
 		width : 90%;
-
 	  }
 	  @include screen-max-width-576 {
-		width      : 100%;
-		min-height : 300px;
+		width      : 80%;
+		height : 280px;
 	  }
-
-
 	  &:hover > .front {
 		transform         : perspective(1000px) rotateY(-180deg);
 		-webkit-transform : perspective(1000px) rotateY(-180deg);
-
 	  }
-
 	  &:hover > .back {
 		-webkit-transform : perspective(1000px) rotateY(0deg);
 		transform         : perspective(1000px) rotateY(0deg);
 	  }
-
 	  .front, .back {
 		width                       : 100%;
 		height                      : 100%;
@@ -76,16 +68,12 @@
 		-webkit-border-radius       : 25px;
 		-moz-border-radius          : 25px;
 		border-radius               : 25px;
-
 	  }
-
 	  .front {
 		-webkit-perspective : none;
 		-moz-perspective    : none;
 		transform           : perspective(none) rotateY(0deg);
-
 	  }
-
 	  .L-slider-img {
 		min-height          : 300px;
 		background-position : top;
