--- a/src/Pages/projects/style.scss
+++ b/src/Pages/projects/style.scss
@@ -14,7 +14,11 @@
   );
   @include screen-max-width-991 {
 	padding-top : 100px;
-  };
+  }
+  @include screen-max-width-767 {
+	padding-top : 50px;
+  }
+;
 
   .L-projects-container {
 	margin-top : 20px;
@@ -23,9 +27,10 @@
 	  display        : flex;
 	  flex-direction : column;
 	}
+
 	.card {
 	  width                 : 45%;
-	  height                : 300px;
+	  height                : 320px;
 	  position              : relative;
 	  cursor                : pointer;
 	  margin                : 20px 0;
@@ -34,28 +39,32 @@
 	  -moz-border-radius    : 25px;
 	  box-shadow            : 0 4px 30px rgba(0, 0, 0, 0.21);
 	  @include screen-max-width-1300 {
-		width : 48%;
+		width  : 48%;
+		height : 320px;
 	  }
 	  @include screen-max-width-991 {
-		width      : 80%;
-		min-height : 400px;
-		margin     : 30px auto
+		width  : 95%;
+		height : 400px;
+		margin : 30px auto
 	  }
 	  @include screen-max-width-767 {
 		width : 90%;
 	  }
 	  @include screen-max-width-576 {
-		width      : 80%;
-		height : 280px;
+		width  : 98%;
+		height : 250px;
 	  }
+
 	  &:hover > .front {
 		transform         : perspective(1000px) rotateY(-180deg);
 		-webkit-transform : perspective(1000px) rotateY(-180deg);
 	  }
+
 	  &:hover > .back {
 		-webkit-transform : perspective(1000px) rotateY(0deg);
 		transform         : perspective(1000px) rotateY(0deg);
 	  }
+
 	  .front, .back {
 		width                       : 100%;
 		height                      : 100%;
@@ -69,20 +78,28 @@
 		-moz-border-radius          : 25px;
 		border-radius               : 25px;
 	  }
+
 	  .front {
 		-webkit-perspective : none;
 		-moz-perspective    : none;
 		transform           : perspective(none) rotateY(0deg);
 	  }
+
 	  .L-slider-img {
-		min-height          : 300px;
+		height              : 320px;
 		background-position : top;
+		@include screen-max-width-1300 {
+		  width  : 100%;
+		  height : 320px;
+		}
+
 		@include screen-max-width-991 {
-		  width      : 100%;
-		  min-height : 400px;
+		  width  : 100%;
+		  height : 400px;
 		}
 		@include screen-max-width-576 {
-		  min-height : 300px;
+		  width  : 100%;
+		  height : 250px
 		}
 	  }
 
